<resources>
    <string name="app_name">Witchborn Roster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_roster">roster</string>
    <string-array name="clan_type">
        <item>Orcs</item>
        <item>Dwarves</item>
    </string-array>
    <string name="title_activity_generate_orcs">GenerateOrcs</string>
    <string name="warlord">Warlord</string>
    <string name="harbinger">Harbinger</string>
    <string name="clan_name">Clan Name</string>
    <string name="scourge">Scourge</string>
    <string name="reaver">Reaver</string>
    <string name="jarl">Jarl</string>
    <string name="binder">Binder</string>
    <string name="karl">Karl</string>
    <string name="bolt_hunter">Bolt Hunter</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
