<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GenerateOrcs">

    <include layout="@layout/generate_clan_base" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/warlord"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/harbinger"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/harbinger_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/harbinger_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/harbinger_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Freebooter"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/freebooter_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/freebooter_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/freebooter_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scourge"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/scourge_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/scourge_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/scourge_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reaver"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/reaver_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/reaver_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/reaver_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ogre"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/ogre_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ogre_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/ogre_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/orcCreateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>


</LinearLayout>