<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GenerateDwarves">

    <include layout="@layout/generate_clan_base" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jarl"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/binder"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/binder_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/binder_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/binder_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/karl_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/karl_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/karl_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bolt_hunter"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/boltHunter_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/boltHunter_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/boltHunter_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ax of the Jarl"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/axOfJarl_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/axOfJarl_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/axOfJarl_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_marginVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dragon Hunter"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <Button
                android:id="@+id/dragonHunter_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dragonHunter_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/dragonHunter_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/dwarfCreateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

</LinearLayout>